# rust-f3-blinky

./: .gdbinit  Cargo.toml  memory.x
.cargo/: config
src/: main.rs
