[package]
name = "rust-f3-blinky"
version = "0.1.0"
authors = ["Jacob Creedon <jcreedon@gmail.com>"]
description = "STM32 F3 Discovery Blinky Rust Example"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
repository = "https://github.com/jcreedon/rust-f3-blinky"

[profile.release]
opt-level = "s"
lto = true
debug = true

[dependencies.f3]
version = "0.5.3"
features = ["rt"]

[dependencies.cortex-m]
version = "0.4.0"

[dependencies.cortex-m-rt]
version = "0.4.0"

[dependencies.panic-abort]
version = "0.1.1"
